# NMEA-Data-Parser

./: README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
data_types/: nmea.py
handlers/: base.py  uart.py
parsers/: base_parser.py  gngsa_parser.py  gpgga_parser.py  gpgsa_parser.py  gpgsv_parser.py  gprmc_parser.py  nmea_parser.py
presentation/: data_plotter.py
services/: ttff.py
utils/: live_parser.py  logger.py  offline_parser.py
